Products.MeetingLiege Changelog
===============================

4.1b9 (unreleased)
------------------

- In onItemAfterTransition, use event.new_state.id instead item.queryState().

4.1b8 (2018-05-09)
------------------

- Do not use member.getGroups, use ToolPloneMeeting.getPloneGroupsForUser that use caching.
- Adapted tests to use _addPrincipalToGroup and _removePrincipalFromGroup from PloneMeetingTestCase.

4.1b7 (2018-05-04)
------------------

- Decision annexes are no more kept in any duplication
- Simplify confidential annex management by giving access to non confidential annexes
  and using the default 'group in charge' parameter.  We adapt the MeetingItem.getGroupInCharge
  method to use the groupOfMatter to handle this

4.1b6 (2018-03-19)
------------------

- Fixed MeetingManager read access to items in review_state validated and following states
- Restricted access of MeetingObserverLocal to positive decided states in every item WF

4.1b5 (2018-03-07)
------------------

- Added state 'accepted_but_modified' in BG WF
- MeetingObserverLocal role is only given on items when it is at least 'validated'
- Give the 'PloneMeeting: Read budget infos' permission to Reader in every item review_states
- Added 'back' shortcuts in item administrative process WF of BG
- Removed 'itemcreated_waiting_advices' review_state leading icon as it is already added
  by PloneMeeting.  Just override the icon title to fit the review_state translation

4.1b4 (2018-02-23)
------------------

- Simplified 'mayCorrect' for meeting and item WF condition adapters
- BG WF : added  'backToProposedToDirector' from 'validated' state
- BG WF : changed validate transition/validated state title so it can be translated
  differently than in College/Council
- BG WF : do BG reviewer able to validate item in state 'proposed_to_cabinet_manager'
- BG WF : defined item validation WF shortcuts like it is made for College item

4.1b3 (2018-01-31)
------------------
